[F] Add http handler for shortened urls
